# SpaceKite

./: .gitignore  input  output  spaceKite.cabal
app/: Main.hs  SpaceKite.hs
test/: Spec.hs
