name:                spaceKite
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Your name here
maintainer:          your.address@example.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable spaceKite-exe
  hs-source-dirs:      app
  main-is:             SpaceKite.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , spaceKite
  default-language:    Haskell2010

test-suite spaceKite-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, app
  main-is:             Spec.hs
  build-depends:       base
                     , spaceKite
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/name/project
